# measurements/api/measurements.py
@@ -12,7 +12,7 @@ from flask import Blueprint, current_app, request
 from flask.json import jsonify
 from werkzeug.exceptions import HTTPException, BadRequest
 
-from sqlalchemy import func
+from sqlalchemy import func, or_, and_
 from sqlalchemy.orm import lazyload, exc
 
 from six.moves.urllib.parse import urljoin, urlencode
@@ -163,6 +163,13 @@ def get_measurement(measurement_id):
         mimetype=current_app.config['JSONIFY_MIMETYPE']
     )
 
+def clean_list_arg(l):
+    """
+    Takes a list argument in the form of "foo, bar, tar" and returns it as a
+    cleaned up list (["foo", "bar", "tar"]).
+    """
+    return map(lambda x: x.strip(), l.split(','))
+
 def list_measurements(
         report_id=None,
         probe_asn=None,
@@ -174,7 +181,10 @@ def list_measurements(
         order_by=None,
         order='desc',
         offset=0,
-        limit=100
+        limit=100,
+        failure=None,
+        anomaly=None,
+        confirmed='true'
     ):
     input_ = request.args.get("input")
 
@@ -182,6 +192,25 @@ def list_measurements(
         if probe_asn.startswith('AS'):
             probe_asn = probe_asn[2:]
         probe_asn = int(probe_asn)
+
+    # When the user specifies a list that includes all the possible values for
+    # boolean arguments, that is logically the same of applying no filtering at
+    # all.
+    if failure is not None:
+        if set(clean_list_arg(failure)) == set(['true', 'false']):
+            failure = None
+        else:
+            failure = failure == 'true'
+    if anomaly is not None:
+        if set(clean_list_arg(anomaly)) == set(['true', 'false']):
+            anomaly = None
+        else:
+            anomaly = anomaly == 'true'
+    if confirmed is not None:
+        if set(clean_list_arg(confirmed)) == set(['true', 'false']):
+            confirmed = None
+        else:
+            confirmed = confirmed == 'true'
 
     try:
         if since is not None:
@@ -199,11 +228,26 @@ def list_measurements(
         raise BadRequest("Invalid order")
 
 
+    c_anomaly = func.coalesce(Label.anomaly, Measurement.anomaly, False)\
+                    .label('anomaly')
+    c_confirmed = func.coalesce(Label.confirmed, Measurement.confirmed, False)\
+                    .label('confirmed')
+    c_msm_failure = func.coalesce(Label.msm_failure, Measurement.msm_failure, False)\
+                    .label('msm_failure')
+
     cols = [
         Measurement.input_no.label('m_input_no'),
         Measurement.measurement_start_time.label('measurement_start_time'),
         Measurement.id.label('m_id'),
         Measurement.report_no.label('m_report_no'),
+
+        c_anomaly,
+        c_confirmed,
+        c_msm_failure,
+
+        Measurement.exc.label('exc'),
+        Measurement.residual_no.label('residual_no'),
+
         Report.report_id.label('report_id'),
         Report.probe_cc.label('probe_cc'),
         Report.probe_asn.label('probe_asn'),
@@ -217,7 +261,9 @@ def list_measurements(
             Input.input.label('input')
         ]
 
-    q = current_app.db_session.query(*cols).join(Report, Report.report_no == Measurement.report_no)
+    q = current_app.db_session.query(*cols)\
+            .join(Report, Report.report_no == Measurement.report_no)\
+            .join(Label, Label.msm_no== Measurement.msm_no)
 
     if input_:
         q = q.join(Measurement, Measurement.input_no == Input.input_no)
@@ -234,6 +280,24 @@ def list_measurements(
         q = q.filter(Measurement.measurement_start_time > since)
     if until is not None:
         q = q.filter(Measurement.measurement_start_time <= until)
+
+    if confirmed is not None:
+        q = q.filter(c_confirmed== confirmed)
+    if anomaly is not None:
+        q = q.filter(c_anomaly == anomaly)
+    if failure is True:
+        q = q.filter(or_(
+            Measurement.exc != None,
+            Measurement.residual_no != None,
+            c_failure == True,
+        ))
+    if failure is False:
+        q = q.filter(and_(
+            Measurement.exc == None,
+            Measurement.residual_no == None,
+            c_failure == False
+        ))
+
 
     if order_by is not None:
         q = q.order_by('{} {}'.format(order_by, order))
@@ -257,8 +321,11 @@ def list_measurements(
             'test_name': row.test_name,
             'measurement_start_time': row.measurement_start_time,
             'input': row.input if row.m_input_no else None,
-            # XXX @darkk how do I get this field populated?
-            'anomaly_type': None
+            'anomaly': row.anomaly,
+            'confirmed': row.confirmed,
+            'failure': (row.exc != None
+                        or row.residual_no != None
+                        or row.msm_failure),
         })
 
     pages = -1
